# triehash-proof

./: .gitignore  Cargo.toml
src/: lib.rs  tests.rs  trie_root.rs
